# sandbox

datetime/v1/: CMakeLists.txt  sources.txt  tests.txt  warnings.txt
datetime/v1/caesar/: datetime.hpp
datetime/v1/caesar/datetime/: gpstime.cpp  gpstime.hpp  timedelta.cpp  timedelta.hpp
datetime/v1/cmake/: CaesarParseFile.cmake
datetime/v1/test/datetime/: gpstime_test.cpp  timedelta_test.cpp
datetime/v2/: CMakeLists.txt
datetime/v2/caesar/: time.hpp  type_traits.hpp
datetime/v2/caesar/time/: datetime.cpp  datetime.hpp  gpstime.cpp  gpstime.hpp  timedelta.cpp  timedelta.hpp
datetime/v2/doc/: doc_timedelta.md  standardese_entities.md  standardese_files.md
datetime/v2/test/: type_traits_test.cpp
datetime/v2/test/time/: datetime_test.cpp  timedelta_test.cpp
ellipsoid/v1/: CMakeLists.txt
ellipsoid/v1/caesar/: spheroid.cpp  spheroid.hpp
ellipsoid/v1/test/: spheroid_test.cpp
error/v1/: CMakeLists.txt
error/v1/caesar/: error.hpp
error/v1/caesar/error/: domain_error.cpp  domain_error.hpp  error.cpp  error.hpp  error_category.cpp  error_category.hpp  error_code.hpp  expected.hpp  out_of_range.cpp  out_of_range.hpp  runtime_error.cpp  runtime_error.hpp
error/v1/caesar/error/detail/: no_value_policy.cpp  no_value_policy.hpp
error/v1/test/: error_code_test.cpp  error_test.cpp  expected_test.cpp
error/v2/: CMakeLists.txt
error/v2/caesar/: error.hpp
error/v2/caesar/error/: domain_error.cpp  domain_error.hpp  error.hpp  error_code.hpp  expected.hpp  out_of_range.cpp  out_of_range.hpp
error/v2/test/: error_code_test.cpp  error_test.cpp  expected_test.cpp
error/v3/: CMakeLists.txt  example.cpp
error/v3/caesar/: error.hpp
error/v3/caesar/error/: error.cpp  error.hpp  expected.hpp
